<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="@dimen/padding"
    android:scrollbars="none"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="@dimen/micro_padding"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <pg.guest.findpg.customviews.CircleImageView
            android:layout_width="160dp"
            android:layout_height="160dp"
            android:src="@drawable/pg" />

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/edt_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/padding"
                android:hint="@string/enter_name"
                android:inputType="textPersonName"
                android:maxLines="1"
                android:singleLine="true" />

        </android.support.design.widget.TextInputLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/padding"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:padding="@dimen/padding"
                android:text="@string/gender"
                android:textSize="@dimen/text_size"
                android:textStyle="bold" />

            <RadioGroup
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/rd_male"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:checked="true"
                    android:layout_marginLeft="@dimen/medium_padding"
                    android:padding="@dimen/micro_padding"
                    android:text="@string/male" />

                <RadioButton
                    android:id="@+id/rd_female"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginLeft="@dimen/padding"
                    android:padding="@dimen/micro_padding"
                    android:text="@string/female" />


            </RadioGroup>

        </LinearLayout>

        <Button
            android:id="@+id/lbl_date_of_birth"
            style="@style/Widget.AppCompat.Button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/padding"
            android:background="@drawable/apptheme_spinner_background_holo_light"
            android:gravity="center_vertical"
            android:padding="@dimen/padding"
            android:text="@string/date_of_birth"
            android:textSize="@dimen/small_text_size"
            android:textStyle="bold" />

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/edt_phone_number"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/padding"
                android:hint="@string/enter_phone_number"
                android:inputType="phone"
                android:maxLines="1"
                android:singleLine="true" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/edt_emergency_contact"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/padding"
                android:hint="@string/enter_emergency_contact_number"
                android:inputType="phone"
                android:maxLines="1"
                android:singleLine="true" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/edt_occupation"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/padding"
                android:hint="@string/enter_your_occupation"
                android:inputType="phone"
                android:maxLines="1"
                android:singleLine="true" />
        </android.support.design.widget.TextInputLayout>


        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/edt_email_address"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/padding"
                android:hint="@string/enter_email_address"
                android:inputType="textEmailAddress"
                android:maxLines="1"
                android:singleLine="true" />

        </android.support.design.widget.TextInputLayout>


        <Button
            android:id="@+id/lbl_id_proof"
            style="@style/Widget.AppCompat.Button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/padding"
            android:background="@drawable/apptheme_spinner_background_holo_light"
            android:gravity="center_vertical"
            android:padding="@dimen/padding"
            android:text="@string/id_proof"
            android:textSize="@dimen/small_text_size"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/padding"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:padding="@dimen/micro_padding"
                android:text="Food Type"
                android:textSize="@dimen/text_size"
                android:textStyle="bold" />

            <RadioGroup
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:checked="true"
                    android:layout_marginLeft="@dimen/padding"
                    android:text="@string/veg" />

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginLeft="@dimen/micro_padding"
                    android:text="@string/non_veg" />

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginLeft="@dimen/micro_padding"
                    android:text="@string/eggyterian" />


            </RadioGroup>

        </LinearLayout>

        <pg.guest.findpg.customviews.RippleView
            android:layout_width="match_parent"
            android:layout_marginTop="@dimen/large_padding"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/sign_in_button"
                style="?android:textAppearanceSmall"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/sign_up"
                android:textStyle="bold" />
        </pg.guest.findpg.customviews.RippleView>
    </LinearLayout>
</ScrollView>