<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/lbl_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/btn_next_menu"
            android:layout_alignTop="@+id/btn_next_menu"
            android:layout_centerHorizontal="true"
            android:layout_toLeftOf="@+id/btn_next_menu"
            android:layout_toRightOf="@+id/btn_previous_menu"
            android:gravity="center"
            android:text="@string/today_s_menu"
            android:textSize="26sp" />

        <ImageView
            android:id="@+id/btn_previous_menu"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_alignParentLeft="true"
            android:layout_toLeftOf="@+id/lbl_menu_title"
            android:background="@android:color/black"
            android:src="@drawable/previous" />

        <ImageView
            android:id="@+id/btn_next_menu"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentTop="true"
            android:background="@android:color/black"
            android:src="@drawable/next" />


    </RelativeLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <RelativeLayout
            android:id="@+id/lbl_breakfast"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/padding"
            android:layout_weight="1">

            <CheckBox
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:background="@drawable/breakfast"
                android:gravity="top" />


        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/lbl_lunch"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/padding"
            android:layout_weight="1">

            <CheckBox
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:background="@drawable/lunch"
                android:gravity="top" />

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/lbl_dinner"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/padding"
            android:layout_weight="1">

            <CheckBox
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:background="@drawable/dinner"
                android:gravity="top" />
        </RelativeLayout>
    </LinearLayout>

    <Button
        android:id="@+id/btn_request_plate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/request_a_plate" />

    <Button
        android:id="@+id/btn_food_menu"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/menu" />

    <Button
        android:id="@+id/btn_food_feeback"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Food feedback" />

    <Button
        android:id="@+id/btn_food_confirm"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Confirm" />


</LinearLayout>